# violet-target-sys-hooks

./: .gitignore  CMakeLists.txt  README.md  config.h.in
lib/: CMakeLists.txt  violet_sys.c  violet_sys.h
test/: CMakeLists.txt  README.md  options.json  template.json  test_workload.c
